tests/snapshots/snapshots__fixture_commander_level3.snap
---
source: tests/snapshots.rs
expression: output
---
argument.js
     3→class Argument {
    13→  constructor(name, description) {
    48→  name() {
    56→  _collectValue(value, previous) {
    73→  default(value, description) {
    86→  argParser(fn) {
    98→  choices(values) {
   119→  argRequired() {
   129→  argOptional() {
   143→function humanReadableArgName(arg) {
command.js
    13→class Command extends EventEmitter {
    20→  constructor(name) {
    99→  copyInheritedSettings(sourceCommand) {
   121→  _getCommandAndAncestors() {
   155→  command(nameAndArgs, actionOptsOrExecDesc, execOpts) {
   192→  createCommand(name) {
   203→  createHelp() {
   215→  configureHelp(configuration) {
   245→  configureOutput(configuration) {
   261→  showHelpAfterError(displayHelp = true) {
   273→  showSuggestionAfterError(displaySuggestion = true) {
   288→  addCommand(cmd, opts) {
   316→  createArgument(name, description) {
   336→  argument(name, description, parseArg, defaultValue) {
   359→  arguments(names) {
   375→  addArgument(argument) {
   409→  helpCommand(enableOrNameAndArgs, description) {
   443→  addHelpCommand(helpCommand, deprecatedDescription) {
   463→  _getHelpCommand() {
   487→  hook(event, listener) {
   508→  exitOverride(fn) {
   533→  _exit(exitCode, code, message) {
   556→  action(fn) {
   585→  createOption(flags, description) {
   599→  _callParseArg(target, value, previous, invalidArgumentMessage) {
   619→  _registerOption(option) {
   644→  _registerCommand(command) {
   670→  addOption(option) {
   741→  _optionEx(config, flags, description, fn, defaultValue) {
   788→  option(flags, description, parseArg, defaultValue) {
   805→  requiredOption(flags, description, parseArg, defaultValue) {
   826→  combineFlagAndOptionalValue(combine = true) {
   837→  allowUnknownOption(allowUnknown = true) {
   848→  allowExcessArguments(allowExcess = true) {
   861→  enablePositionalOptions(positional = true) {
   875→  passThroughOptions(passThrough = true) {
   885→  _checkForBrokenPassThrough() {
   905→  storeOptionsAsProperties(storeAsProperties = true) {
   925→  getOptionValue(key) {
   940→  setOptionValue(key, value) {
   953→  setOptionValueWithSource(key, value, source) {
   971→  getOptionValueSource(key) {
   983→  getOptionValueSourceWithGlobals(key) {
  1001→  _prepareUserArgs(argv, parseOptions) {
  1090→  parse(argv, parseOptions) {
  1119→  async parseAsync(argv, parseOptions) {
  1127→  _prepareForParse() {
  1141→  saveStateBeforeParse() {
  1158→  restoreStateBeforeParse() {
  1183→  _checkForMissingExecutable(executableFile, executableDir, subcommandName) {
  1202→  _executeSubCommand(subcommand, args) {
  1352→  _dispatchSubcommand(commandName, operands, unknown) {
  1380→  _dispatchHelpCommand(subcommandName) {
  1403→  _checkNumberOfArguments() {
  1428→  _processArguments() {
  1481→  _chainOrCall(promise, fn) {
  1499→  _chainOrCallHooks(promise, event) {
  1531→  _chainOrCallSubCommandHook(promise, subCommand, event) {
  1550→  _parseCommand(operands, unknown) {
  1649→  _findCommand(name) {
  1664→  _findOption(arg) {
  1675→  _checkForMissingMandatoryOptions() {
  1694→  _checkForConflictingLocalOptions() {
  1723→  _checkForConflictingOptions() {
  1748→  parseOptions(args) {
  1902→  opts() {
  1924→  optsWithGlobals() {
  1940→  error(message, errorOptions) {
  1966→  _parseOptionsEnv() {
  1996→  _parseOptionsImplied() {
  2034→  missingArgument(name) {
  2046→  optionMissingArgument(option) {
  2058→  missingMandatoryOptionValue(option) {
  2070→  _conflictingOption(option, conflictingOption) {
  2114→  unknownOption(flag) {
  2146→  _excessArguments(receivedArgs) {
  2162→  unknownCommand() {
  2195→  version(str, flags, description) {
  2218→  description(str, argsDescription) {
  2234→  summary(str) {
  2249→  alias(alias) {
  2289→  aliases(aliases) {
  2304→  usage(str) {
  2331→  name(str) {
  2344→  helpGroup(heading) {
  2363→  commandsGroup(heading) {
  2382→  optionsGroup(heading) {
  2392→  _initOptionGroup(option) {
  2401→  _initCommandGroup(cmd) {
  2419→  nameFromFilename(filename) {
  2437→  executableDir(path) {
  2450→  helpInformation(contextOptions) {
  2475→  _getOutputContext(contextOptions) {
  2505→  outputHelp(contextOptions) {
  2559→  helpOption(flags, description) {
  2592→  _getHelpOption() {
  2607→  addHelpOption(option) {
  2621→  help(contextOptions) {
  2656→  addHelpText(position, text) {
  2686→  _outputHelpIfRequested(args) {
  2705→function incrementNodeInspectorPort(args) {
  2752→function useColor() {
error.js
     4→class CommanderError extends Error {
     6→   * Constructs the CommanderError class
    11→  constructor(exitCode, code, message) {
    25→class InvalidArgumentError extends CommanderError {
    27→   * Constructs the InvalidArgumentError class
    30→  constructor(message) {
help.js
    12→class Help {
    13→  constructor() {
    29→  prepareContext(contextOptions) {
    40→  visibleCommands(cmd) {
    62→  compareOptions(a, b) {
    79→  visibleOptions(cmd) {
   112→  visibleGlobalOptions(cmd) {
   139→  visibleArguments(cmd) {
   162→  subcommandTerm(cmd) {
   182→  optionTerm(option) {
   193→  argumentTerm(argument) {
   205→  longestSubcommandTermLength(cmd, helper) {
   224→  longestOptionTermLength(cmd, helper) {
   241→  longestGlobalOptionTermLength(cmd, helper) {
   258→  longestArgumentTermLength(cmd, helper) {
   276→  commandUsage(cmd) {
   300→  commandDescription(cmd) {
   313→  subcommandDescription(cmd) {
   325→  optionDescription(option) {
   372→  argumentDescription(argument) {
   403→  formatItemList(heading, items, helper) {
   417→  groupItems(unsortedItems, visibleItems, getGroup) {
   443→  formatHelp(cmd, helper) {
   535→  displayWidth(str) {
   545→  styleTitle(str) {
   549→  styleUsage(str) {
   563→  styleCommandDescription(str) {
   566→  styleOptionDescription(str) {
   569→  styleSubcommandDescription(str) {
   572→  styleArgumentDescription(str) {
   575→  styleDescriptionText(str) {
   578→  styleOptionTerm(str) {
   581→  styleSubcommandTerm(str) {
   594→  styleArgumentTerm(str) {
   597→  styleOptionText(str) {
   600→  styleArgumentText(str) {
   603→  styleSubcommandText(str) {
   606→  styleCommandText(str) {
   618→  padWidth(cmd, helper) {
   633→  preformatted(str) {
   650→  formatItem(term, termWidth, description, helper) {
   695→  boxWrap(str, width) {
   740→function stripColor(str) {
option.js
     3→class Option {
    11→  constructor(flags, description) {
    47→  default(value, description) {
    65→  preset(arg) {
    82→  conflicts(names) {
   100→  implies(impliedOptionValues) {
   120→  env(name) {
   132→  argParser(fn) {
   144→  makeOptionMandatory(mandatory = true) {
   156→  hideHelp(hide = true) {
   165→  _collectValue(value, previous) {
   181→  choices(values) {
   203→  name() {
   217→  attributeName() {
   230→  helpGroup(heading) {
   243→  is(arg) {
   256→  isBoolean() {
   268→class DualOptions {
   272→  constructor(options) {
   297→  valueFromOption(value, option) {
   316→function camelcase(str) {
   328→function splitOptionFlags(flags) {
suggestSimilar.js
     1→const maxDistance = 3;
     3→function editDistance(a, b) {
    56→function suggestSimilar(word, candidates) {
