tests/snapshots/snapshots__fixture_debug.snap
---
source: tests/snapshots.rs
expression: output
---
browser.js
   115→function useColors
   149→function formatArgs
   200→function save
   219→function load
   247→function localstorage
common.js
     7→function setup
node.js
   155→function useColors
   167→function formatArgs
   182→function getDate
   193→function log
   203→function save
   220→function load
   231→function init
