tests/snapshots/snapshots__fixture_debug_level2.snap
---
source: tests/snapshots.rs
expression: output
---
browser.js
   115→function useColors() {
   149→function formatArgs(args) {
   200→function save(namespaces) {
   219→function load() {
   247→function localstorage() {
common.js
     7→function setup(env) {
index.js
node.js
   155→function useColors() {
   167→function formatArgs(args) {
   182→function getDate() {
   193→function log(...args) {
   203→function save(namespaces) {
   220→function load() {
   231→function init(debug) {
