tests/snapshots/snapshots__fixture_dotenv_level3.snap
---
source: tests/snapshots.rs
expression: output
---
cli-options.js
     1→const re = /^dotenv_config_(encoding|path|quiet|debug|override|DOTENV_KEY)=(.+)$/
env-options.js
     2→const options = {}
main.d.ts
     5→export interface DotenvParseOutput {
     9→export interface DotenvPopulateOutput {
    25→export interface DotenvConfigOptions {
    92→export interface DotenvConfigOutput {
    97→type DotenvError = Error & {
   106→export interface DotenvPopulateOptions {
   126→export interface DotenvPopulateInput {
main.js
     7→const version = packageJson.version
    10→const TIPS = [
    27→function _getRandomTip () {
    31→function parseBoolean (value) {
    38→function supportsAnsi () {
    42→function dim (text) {
    46→const LINE = /(?:^|^)\s*(?:export\s+)?([\w.-]+)(?:\s*=\s*?|:\s+?)(\s*'(?:\\'|[^'])*'|\s*"(?:\\"|[^"])*"|\s*`(?:\\`|[^`])*`|[^#\r\n]+)?\s*(?:#.*)?(?:$|$)/mg
    49→function parse (src) {
    87→function _parseVault (options) {
   130→function _warn (message) {
   134→function _debug (message) {
   138→function _log (message) {
   142→function _dotenvKey (options) {
   157→function _instructions (result, dotenvKey) {
   200→function _vaultPath (options) {
   224→function _resolveHome (envPath) {
   228→function _configVault (options) {
   248→function configDotenv (options) {
   328→function config (options) {
   346→function decrypt (encrypted, keyStr) {
   378→function populate (processEnv, parsed, options = {}) {
   413→const DotenvModule = {
